#80 fixed java8 compatibility issue